--- a/.github/workflows/projeto-quarkus-estudo-maven.yml
+++ b/.github/workflows/projeto-quarkus-estudo-maven.yml
@@ -24,14 +24,14 @@ jobs:
    Test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@main
-    - name: Setup java
-      uses: joschi/setup-jdk@v1
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        java-version: 'openjdk11'
-        architecture: 'x64'
+        java-version: '11'
+        distribution: 'adopt'
     - name: Test with Maven
       run: |
         mvn -q -am clean test
@@ -39,12 +39,12 @@ jobs:
     needs: Test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@main
-    - name: Setup java
-      uses: joschi/setup-jdk@v1
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
       with:
-        java-version: 'openjdk11'
-        architecture: 'x64'
+        java-version: '11'
+        distribution: 'adopt'
     - name: Build with Maven
       run: |
         mvn -q -am clean package install -Dmaven.test.skip=true
